Resolves: tdf#84713 do not substitute separator in R1C1 notation hyperlinks

During import, in hyperlinks all Sheet!xxx were converted to Sheet.xxx
to fit CalcA1 notation, but in this case Sheet!R1C1 was used and
Sheet.R1C1 is not a valid address notation, so the hyperlink didn't
work. Do not attempt to convert R1C1 notation, the hyperlink handler
does handle all known notations. On Excel export, handle that the
separator can be both, '.' and '!'.

Change-Id: I8428b2240912f42fd6789d249c90982127ee7c01